--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Kitchens</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="./img/logo.png" alt="logo" height="150px" width="150px"> 
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="">Про нас</a> </li>
+                    <li><a href="">Що ми пропонуємо</a></li>
+                    <li><a href="">Портфоліо</a></li>
+                    <li><a href="">Контакти</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <h1>Кухні на замовлення за індивідуальними розмірами</h1>
+        </div>
+        <div>
+            <h2>БУДЬ-ЯКОГО СКЛАДНОСТІ ТА БУДЬ-ЯКОГО ДИЗАЙНУ ПІД ВАШ БЮДЖЕТ</h2>
+        </div>
+        <div>
+
+        </div>
+    </header>
+
 </body>
 </html>
