--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
             </nav>
         </div>
         <div>
-            <h1>Кухні на замовлення за індивідуальними розмірами</h1>
+            <h1><b>Кухні на замовлення за індивідуальними розмірами</b> </h1>
+        </div>
+        <div class="line">
+            
         </div>
         <div>
-            <h2>БУДЬ-ЯКОГО СКЛАДНОСТІ ТА БУДЬ-ЯКОГО ДИЗАЙНУ ПІД ВАШ БЮДЖЕТ</h2>
+            <h3>БУДЬ-ЯКОГО СКЛАДНОСТІ ТА БУДЬ-ЯКОГО ДИЗАЙНУ ПІД ВАШ БЮДЖЕТ</h3>
         </div>
         <div>
-
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </header>
-
 </body>
 </html>
