--- a/index.html
+++ b/index.html
@@ -31,10 +31,21 @@
         <div>
             <h3>БУДЬ-ЯКОГО СКЛАДНОСТІ ТА БУДЬ-ЯКОГО ДИЗАЙНУ ПІД ВАШ БЮДЖЕТ</h3>
         </div>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="preference">
+            <div>
+                <img src="./img/garantee.png" alt="garantee">
+                <p>ГАРАНТІЯ 100% НА ВСE</p>
+            </div>
+
+            <div>
+                <img src="./img/percent.png" alt="percent">
+                <p>ЦІНИ ВІД ВИРОБНИКІВ</p>
+            </div>
+
+            <div>
+                <img src="./img/size.png" alt="size">
+                <p>БЕЗКОШТОВНИЙ ВИЇЗД НА ЗАМІР</p>
+            </div>
         </div>
     </header>
 </body>
