--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Kitchens</title>
 </head>
 <body>
@@ -31,22 +34,93 @@
         <div>
             <h3>БУДЬ-ЯКОГО СКЛАДНОСТІ ТА БУДЬ-ЯКОГО ДИЗАЙНУ ПІД ВАШ БЮДЖЕТ</h3>
         </div>
-        <div class="preference">
+    </header>
+    <main>
+        <div>
+            <h1>ПРО НАШЕ ВИРОБНИЦТВО</h1>
+        </div>
+        <div class="line">
+        </div>
+        <div>
+            <h2>
+                Швидко, професійно та якісно виготовимо оригінальні кухонні гарнітури, шафи-купе, вбиральні, ванні кімнати, офісні меблі, стільниці з каменю для кухні та ванних кімнат, барні стійки та підвіконня.
+            </h2>
+        </div>
+        <div class="production">
             <div>
-                <img src="./img/garantee.png" alt="garantee">
-                <p>ГАРАНТІЯ 100% НА ВСE</p>
+                <p>
+                    Наша спеціалізація – ексклюзивні кухонні інтер'єри, в яких продумано все до найменших дрібниць. Вам потрібно лише докладно розповісти нашому дизайнеру про своє бачення майбутнього кухонного простору, а решту ми зробимо самі. Вам буде надано на затвердження вже готового дизайну проекту кухні, щоб ви могли візуально оцінити його, внести можливі зміни і зробити замовлення на виготовлення меблів. У новому інтер'єрі, з новими меблями, вам буде затишно та комфортно займатися приготуванням своїх улюблених страв.
+                    <br><br>
+                    Вам буде надано на затвердження вже готового дизайну проекту кухні, щоб ви могли візуально оцінити його, внести можливі зміни і зробити замовлення на виготовлення меблів. У новому інтер'єрі, з новими меблями, вам буде затишно та комфортно займатися приготуванням своїх улюблених страв.
+                </p>
             </div>
-
+            
             <div>
-                <img src="./img/percent.png" alt="percent">
-                <p>ЦІНИ ВІД ВИРОБНИКІВ</p>
-            </div>
-
-            <div>
-                <img src="./img/size.png" alt="size">
-                <p>БЕЗКОШТОВНИЙ ВИЇЗД НА ЗАМІР</p>
+                <img src="./img/kitchen.jpg" alt="kitchen">
+                <div class="bgc">
+                </div>
             </div>
         </div>
-    </header>
+    </main>
+    <section class="section1">
+        <div>
+            <h1>
+                ЧОМУ КЛІЄНТИ ЗАМОВЛЯЮТЬ МЕБЛІ У НАС
+            </h1>
+        </div>
+        <div class="line"></div>
+        <div>
+            <h2>Швидко, професійно та якісно виготовимо оригінальні кухонні гарнітури, шафи-купе, вбиральні, ванні кімнати, офісні меблі, стільниці з каменю для кухні та ванних кімнат, барні стійки та підвіконня.</h2>
+        </div>
+        <div class="benefits">
+            <div>
+                <img src="./img/price.png" alt="price">
+                <p>Ціни від виробників</p>
+            </div>
+
+            <div>
+                <img src="./img/certificate.png" alt="certificate">
+                <p>Сертифікати якості</p>
+            </div>
+
+            <div>
+                <img src="./img/delivery.png" alt="delivery">
+                <p>Доставимо протягом дня</p>
+            </div>
+
+            <div>
+                <img src="./img/eko.png" alt="eko">
+                <p>Екологічні матеріали</p>
+            </div>
+
+            <div>
+                <img src="./img/expirience.png" alt="expirience">
+                <p>10 років досвіду на ринку</p>
+            </div>
+
+            <div>
+                <img src="./img/garantee.png" alt="garantee">
+                <p>Гарантія 100% на все</p>
+            </div>
+
+            <div>
+                <img src="./img/pleased.png" alt="pleased">
+                <p>Тисячі задоволених клієнтів</p>
+            </div>
+
+            <div>
+                <img src="./img/team.png" alt="team">
+                <p>Профеійна команда</p>
+            </div>
+            <div>
+                <img src="./img/sale.png" alt="sale">
+                <p>Знижки для постійних клієнтів</p>
+            </div>
+            <div>
+                <img src="./img/credit.png" alt="credit">
+                <p>Можлива розстрочка на 12 місяців під 0%</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
