--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Kitchens</title>
+    <script src="./index.js" defer></script>
 </head>
 <body>
     <header>
@@ -118,9 +119,26 @@
             </div>
             <div>
                 <img src="./img/credit.png" alt="credit">
-                <p>Можлива розстрочка на 12 місяців під 0%</p>
+                <p>Відстрокування платежу</p>
             </div>
         </div>
+    </section>
+    <section>
+            <div>
+                <h1>Наші роботи</h1>
+            </div>
+            <div class="slide">
+                <div>
+                    <img src="./img/left-arrow.png" alt="left" class="left">
+                </div>
+                <div>
+                    <img src="./pic/img1.jpg" alt="img" class="image-slider">
+                </div>
+                <div>
+                    <img src="./img/right-arrow.png" alt="right"  class="right">
+                </div>
+            </div>
+            
     </section>
 </body>
 </html>
